# CLFM

./: .gitignore  LICENSE  README.md  compare_methods-Copy1.ipynb  compare_methods.ipynb  generate_ground_truth.ipynb  install.sh  pyproject.toml
notebooks/: 1. Compare Matching Methods.ipynb  2. Generate Ground Truth.ipynb  Current_File_Data.mat  calibration_pixels.m  calibration_polarimetre_Mueller.m  compare_histology_histology.ipynb  concatParam.m  dephaseur_diattenuateur.m  gert_gt.m  imgJ_align.py  manual_selection.mat  moyennage_csv.m  process_calibration.ipynb
notebooks/Fonctions/: CalculMM.m  Packing.m  SizeIM2Coordinates.m  affichage_histogramme_parametre_polarimetrique.m  parametrage_camera.m  readCOD.m  read_cod_file.m  rota.m
notebooks/Fonctions/Fonctions AnalysesMM/: CalculMM.m  affichage_histogramme_parametre_polarimetrique.m  affichage_matrice_mueller.m  affichage_matrice_mueller_old.m  colormap_perso.m  depha.m  diattenuator_matrix_construction.m  eigenvalues_coherency_image.m  filtrage_physicite_image.m  histogram_polarimetric_markers04.m  histogramm_polarimetric_markers03.m  histogramme_matrice_mueller.m  image_saturation.m  limite_speculaire.m  masques_physicite_det.m  parametrage_camera.m  physical_crit.m  rota.m  soustraction_alpha_image.m
notebooks/Fonctions/Fonctions AnalysesMM/Fonctions génériques MATLAB/: Packing.m  choosedialog.m  showMaskAsOverlay.m
notebooks/Fonctions/Fonctions AnalysesMM/Fonctions liées à codiff/: read_calibration_file.m  read_cod_file.m  save_cod_file_Jean.m
results/: parameters.xlsx
src/clfm/: __init__.py  clfm.py  get_features.py  get_matches.py  manual_step.py  metrics.py  register.py  utils.py
src/clfm/scripts/: imgJ_align.py
src/comparemethods/: __init__.py  alignment.py  get_features.py  helpers.py  match_mnn.py  match_oanet.py  matcher.py  plot_results.py  prepare_images.py
src/comparemethods/OANet-master/core/: oan.py
src/comparemethods/OANet-master/demo/: Untitled.ipynb  get_sift_points.py  infer_oa_net.py
src/comparemethods/SuperPoint/: find_superpoints.py
src/comparemethods/superglue/: demo_superglue.py
src/comparemethods/superglue/models/: matching.py  (+2 more)
(+16 files in other folders)
