# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "processcalib"
description = ""
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "romain.gros@unibe.ch", name = "Romain Gros" },
]
dynamic = ["version"]
dependencies = ["numpy", "Pillow", "scipy", "tqdm", "matplotlib"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

# extras
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
test = ["pytest>=6.0"]

[project.urls]
homepage = "https://github.com/RomGr/ProcessCalibration"
repository = "https://github.com/RomGr/ProcessCalibration"
