# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "clfm"
description = ""
readme = "README.md"
requires-python = ">=3.8.0, <3.10"
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "elearomy.gros@unibe.ch", name = "Éléa Gros" },
]
dynamic = ["version"]
dependencies = ["numpy", "Pillow", "scipy", "tqdm", "matplotlib==3.8.0", "pyimagej", "opencv-python==4.4.0.46", "opencv-contrib-python==4.7.0.68", "pytorch-lightning==1.3.5", "torchmetrics==0.6.0", "loguru", "einops", "kornia", "yacs", "pytorch-lightning==1.3.5", "nvidia-ml-py", "jupyter", "joblib", "torchvision", "h5py", "scikit-image", "SimpleITK", "seaborn", "spaces", "huggingface-hub==0.34.3"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

# extras
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
test = ["pytest>=6.0"]

[project.urls]
homepage = "https://github.com/eleagros/CLFM"
repository = "https://github.com/eleagros/CLFM"